comments on ReviewDAOMongoImpl